--- a/css/style.css
+++ b/css/style.css
@@ -421,10 +421,18 @@ SLIDER
 .slider-content {
     text-align: center;
 }
+.left .slider-content {
+  text-align: left;
+  padding-left: 300px;
+}
+.slide.left {
+  background-position: right;;
+}
 .slider-content h1 {
     font-size: 42px;
     margin-bottom: 20px;
 }
+
 .slider-content h1.dark {
     color: #fff;
 }
@@ -1011,6 +1019,13 @@ RESPONSIVE
         left: 0;
     }
 
+    /** SLIDER **/
+
+    .left .slider-content {
+      text-align: center;
+      padding-left: 0;
+    }
+
     /** MENU **/
     .top-menu {
         display: none;
@@ -1130,6 +1145,18 @@ RESPONSIVE
 
 /* sm */
 @media (min-width: 701px) and (max-width: 992px) {
+
+    /** SLIDER **/
+
+    .left .slider-content {
+      text-align: left;
+      padding-left: 30px;
+      max-width: 400px;
+    }
+    .slide.left {
+      background-position: 70%;
+    }
+
     .hidden-sm {
         display: none;
     }
@@ -1241,6 +1268,15 @@ RESPONSIVE
 
 /* md */
 @media (min-width: 992px) and (max-width: 1200px) {
+    /** SLIDER **/
+
+    .left .slider-content {
+      text-align: left;
+      padding-left: 80px;
+    }
+    .slide.left {
+      background-position: 70%;
+    }
     .menu-icon-wrapper { display: none; }
     .fade_box { display: none; }
     .section, .section-last, .section-current { background-position: 100% 50% }
@@ -1257,6 +1293,14 @@ RESPONSIVE
 
 /* lg */
 @media (min-width: 1200px) and (max-width: 1600px) {
+    /** SLIDER **/
+    .left .slider-content {
+      text-align: left;
+      padding-left: 80px;
+    }
+    .slide.left {
+      background-position: 100%;
+    }
     .section-in { padding-left: 30px; }
     .section-in p { max-width: 400px; }
     .menu-icon-wrapper { display: none; }
